<resources>
    <string name="app_name">Quicklyn</string>

    <!--APP commons-->
    <string name="title_new_post">New Post</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_name">Full name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_successful">Login Successful!</string>
    <string name="error_invalid_credentials">Invalid Login or Password</string>
    <string name="error_field_required">This field is required</string>

    <!--Create account-->
    <string name="create_account">Create Account</string>
    <string name="account_created">Account created successfully</string>
    <string name="error_name_required">Please, enter your name</string>
    <string name="error_email_required">Please, enter a valid email</string>
    <string name="error_password_required">Please, enter a password</string>
    <string name="error_password_has_no_number">Password has to have number</string>
    <string name="error_password_match">Passwords do not match</string>

    <!--Buttons-->
    <string name="continue_button">Continue</string>
    <string name="create_post_button">Create New Post</string>
    <string name="login">Login</string>

    <!--Hint-->
    <string name="location_hint">Location</string>
    <string name="other_hint">Please, specify</string>
    <string name="date_hint">Date: Jan 01, 2017</string>

    <!--Common to PostActivities -->
    <string name="step_main">Main</string>
    <string name="step_details">Details</string>
    <string name="step_confirm">Confirm</string>

    <!--PostActivityStep1-->
    <string name="post_title">Title</string>
    <string name="post_description">Description/Tasks</string>
    <string name="post_price_currency">C$</string>
    <string name="invalid_title">Please, type a valid title</string>
    <string name="invalid_description">Please, type a valid description</string>
    <string name="invalid_price">Please, type a valid price</string>

    <!--PostActivityStep2-->
    <string name="post_type_location">What type of place</string>
    <string name="post_housing">housing</string>
    <string name="post_apartment">apartment / condominium</string>
    <string name="post_office">office / building</string>
    <string name="post_room">rooms / shared house</string>
    <string name="post_other">other</string>
    <string name="invalid_location">Please, select a valid location</string>
    <string name="invalid_place_type">Please, choose one type of place</string>
    <string name="invalid_place_other">Please, specify the type of place</string>
    <string name="invalid_date">Please, select a valid date</string>

    <string name="price">C$50</string>
    <string name="posttitle">Jun 20th, Office room and washroom Cleaning</string>
    <string name="office">office</string>
    <string name="apt">apartment</string>


</resources>
