<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post_step1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.quicklyn.quicklyn.PostStep1Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_icon_step1_green"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_main"
                    android:textAlignment="center"
                    android:textSize="16dp"/>
            </LinearLayout>


            <ImageView
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_icon_step2_green"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_details"
                    android:textAlignment="center"
                    android:textSize="16dp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_gravity="center_vertical"
                android:layout_margin="15dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_icon_step3_gray"
                    android:layout_gravity="center_horizontal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/step_confirm"
                    android:textAlignment="center"
                    android:textSize="16dp"/>
            </LinearLayout>

        </LinearLayout>

        <!--Start of screen data-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/post_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_map"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textIsSelectable="true"
                android:ellipsize="end"
                android:inputType="text"
                android:hint="@string/location_hint"
                android:drawablePadding="5dp"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_type_location"
                    android:textSize="20dp"/>
            </LinearLayout>
            
            <RadioGroup
                android:id="@+id/type_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/housing_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_housing"
                    android:textSize="16dp"/>


                <RadioButton
                    android:id="@+id/apartment_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_apartment"
                    android:textSize="16dp"/>


                <RadioButton
                    android:id="@+id/office_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_office"
                    android:textSize="16dp"/>


                <RadioButton
                    android:id="@+id/room_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_room"
                    android:textSize="16dp"/>

                <RadioButton
                    android:id="@+id/other_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/post_other"
                    android:textSize="16dp"/>

                <EditText
                    android:id="@+id/other_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other_hint"
                    android:textSize="20dp"
                    android:visibility="gone"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <EditText
                android:id="@+id/post_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_hint"
                android:textIsSelectable="true"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/post2_button_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_button"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
